refactor: Remove unused scripts and styles from index.html for cleaner structure

--- a/puper/frontend/public/index.html
+++ b/puper/frontend/public/index.html
@@ -7,182 +7,10 @@
 
     <!-- Google Maps API Script -->
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC07tp53REg-Pvpde-draNRRZkiy9_dB8k&libraries=places&callback=initMap" async defer></script>
-
-    <!-- Tailwind CSS for styling -->
-    <script src="https://cdn.tailwindcss.com"></script>
-
-    <!-- React and Babel for running JSX in the browser -->
-    <script src="https://unpkg.com/react@18/umd/react.development.js"></script>
-    <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
-    <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
-
-    <style>
-        /* Custom styles for the GIF background */
-        .hero-background {
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            object-fit: cover; /* This makes the GIF cover the entire area */
-            z-index: -1; /* Puts the GIF behind the content */
-        }
-    </style>
 </head>
-<body class="bg-gray-900">
+<body>
+    <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
 
-    <script type="text/babel">
-        const { useState, useEffect, useRef } = React;
-
-        // --- Mock Data for Restrooms ---
-        // In your real app, you'll fetch this from Supabase.
-        const mockRestrooms = [
-            { id: 1, name: "Cafe Beignet", rating: 4.5, lat: 29.957, lng: -90.066 },
-            { id: 2, name: "Jackson Square Restrooms", rating: 3.2, lat: 29.9574, lng: -90.0631 },
-            { id: 3, name: "The Shops at Canal Place", rating: 4.8, lat: 29.951, lng: -90.064 },
-        ];
-
-        // 1. --- Hero Section Component (Updated for GIF) ---
-        const HeroSection = ({ onShowMap }) => {
-            // --- How to use your local hero.gif ---
-            // 1. Place 'hero.gif' in your 'src/assets' folder.
-            // 2. Import it at the top of your component file:
-            //    import heroGif from '../assets/hero.gif';
-            // 3. Use it in the `src` attribute: `src={heroGif}`
-            
-            // Using your local hero.gif file
-            const gifSrc = "/hero.gif";
-
-            return (
-                <div className="relative h-screen w-full flex items-center justify-center overflow-hidden">
-                    {/* --- GIF Background --- */}
-                    <img 
-                        src={gifSrc} 
-                        alt="Cityscape animation" 
-                        className="hero-background" 
-                    />
-
-                    {/* --- Overlay Content --- */}
-                    <div className="relative z-10 text-center text-white bg-black bg-opacity-60 p-8 rounded-xl shadow-lg">
-                        <h1 className="text-5xl md:text-7xl font-bold mb-4">PÜPER</h1>
-                        <p className="text-lg md:text-xl mb-8">Find the best public restrooms, wherever you go.</p>
-                        <button 
-                            onClick={onShowMap}
-                            className="bg-blue-600 hover:bg-blue-700 text-white font-bold py-3 px-6 rounded-full text-lg transition duration-300 ease-in-out transform hover:scale-105 shadow-md"
-                        >
-                            Find Restrooms Near Me
-                        </button>
-                    </div>
-                </div>
-            );
-        };
-
-        // 2. --- 3D Map Component (Now Fully Functional) ---
-        const MapComponent = ({ onGoBack }) => {
-            const mapRef = useRef(null);
-            const [map, setMap] = useState(null);
-            const [infoWindow, setInfoWindow] = useState(null);
-
-            // Effect to initialize the map
-            useEffect(() => {
-                if (mapRef.current && !map && window.google) {
-                    const gMaps = window.google.maps;
-                    const initialCenter = { lat: 29.9511, lng: -90.0715 }; // Default to New Orleans
-
-                    const newMap = new gMaps.Map(mapRef.current, {
-                        center: initialCenter,
-                        zoom: 16,
-                        tilt: 45,
-                        heading: 90,
-                        mapId: 'faee9c07df291235bae84d6c', // Your custom Map ID for styling
-                        disableDefaultUI: true,
-                        gestureHandling: 'greedy'
-                    });
-                    
-                    setMap(newMap);
-                    setInfoWindow(new gMaps.InfoWindow());
-                }
-            }, [mapRef, map]);
-
-            // Effect for Geolocation (centers map on user)
-            useEffect(() => {
-                if (map) {
-                    if (navigator.geolocation) {
-                        navigator.geolocation.getCurrentPosition((position) => {
-                            const userLocation = {
-                                lat: position.coords.latitude,
-                                lng: position.coords.longitude,
-                            };
-                            map.setCenter(userLocation);
-                        }, () => {
-                            console.log("Geolocation failed or was denied.");
-                        });
-                    }
-                }
-            }, [map]);
-
-            // Effect to add markers to the map
-            useEffect(() => {
-                if (map && infoWindow && mockRestrooms.length > 0) {
-                    mockRestrooms.forEach(restroom => {
-                        const marker = new window.google.maps.Marker({
-                            position: { lat: restroom.lat, lng: restroom.lng },
-                            map: map,
-                            title: restroom.name,
-                            // Optional: Use a custom icon
-                            // icon: { url: '/path/to/your/icon.svg', scaledSize: new window.google.maps.Size(40, 40) }
-                        });
-
-                        marker.addListener('click', () => {
-                            const content = `
-                                <div class="p-2">
-                                    <h3 class="font-bold text-lg">${restroom.name}</h3>
-                                    <p class="text-gray-600">Rating: ${restroom.rating} / 5.0</p>
-                                </div>
-                            `;
-                            infoWindow.setContent(content);
-                            infoWindow.open(map, marker);
-                        });
-                    });
-                }
-            }, [map, infoWindow]);
-
-
-            return (
-                <div className="relative h-screen w-full">
-                    <div ref={mapRef} className="w-full h-full" />
-                    <button
-                        onClick={onGoBack}
-                        className="absolute top-4 left-4 z-10 bg-white text-gray-800 font-bold py-2 px-4 rounded-lg shadow-lg hover:bg-gray-200 transition"
-                    >
-                        &larr; Back to Home
-                    </button>
-                </div>
-            );
-        };
-
-        // 3. --- Main App Component ---
-        const App = () => {
-            const [showMap, setShowMap] = useState(false);
-            const [mapsApiLoaded, setMapsApiLoaded] = useState(false);
-
-            window.initMap = () => setMapsApiLoaded(true);
-
-            if (!mapsApiLoaded && showMap) {
-                return <div className="h-screen w-full flex items-center justify-center text-white">Loading Map...</div>;
-            }
-
-            if (showMap) {
-                return <MapComponent onGoBack={() => setShowMap(false)} />;
-            } else {
-                return <HeroSection onShowMap={() => setShowMap(true)} />;
-            }
-        };
-
-        const container = document.getElementById('root');
-        const root = ReactDOM.createRoot(container);
-        root.render(<App />);
-    </script>
 </body>
 </html>
