fix: correct HTML structure in index.html and update restroom rating icon in MapboxView

--- a/puper/frontend/public/index.html
+++ b/puper/frontend/public/index.html
@@ -1,99 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
- <meta charset="UTF-8">
- <meta name="viewport" content="width=device-width,initial-scale=1">
- <title>Puper</title>
- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC07tp53REg-Pvpde-draNRRZkiy9_dB8k&amp;libraries=places&amp;callback=initMap" async="" defer="defer"></script>
- <script defer="defer" src="/static/js/main.4c84462c.js"></script>
- <link href="/static/css/main.543c31ff.css" rel="stylesheet">
-</head> 
-<body>
-  <div id="root">
-    <div class="App">
-      <div class="psychedelic-bg"></div>
-      <div class="layout">
-        <header class="header">
-          <div class="header-content"></div>
-            <a class="logo-section" href="/"></a>
-          <div class="App">
-            <div class="psychedelic-bg"></div>
-            <div class="layout">
-              <header class="header">
-                <div class="header-content">
-                  <a class="logo-section" href="/">
-                    <div>
-                      <h1 class="app-title">PÜPER</h1>
-                      <p class="tagline">Your Guide to Relief</p>
-                    </div>
-                  </a>
-                  <nav class="nav-menu">
-                    <a class="nav-item" href="/map">Map</a>
-                    <a class="nav-item" href="/map?add=true">Add Restroom</a>
-                    <a class="nav-item" href="/leaderboard">Leaderboard</a>
-                    <button class="nav-item">Login</button>
-                  </nav>
-                </div>
-              </header>
-              <main class="main-content">
-                <div class="home-page">
-                  <section class="hero-section">
-                    <div class="hero-video-wrapper">
-                      <video class="hero-video" autoplay muted loop>
-                        <source src="/src/assets/images/hero-video.mp4" type="video/mp4">
-                        Your browser does not support the video tag.
-                      </video>
-                    </div>
-                    <div class="container hero-content"></div>
-                  </section>
-                  <section class="features-section" style="background-image: url(&quot;/static/media/wood.1862ac321fb0f8779ae6.png&quot;);">
-                    <div class="container">
-                      <h2 class="section-title" style="opacity: 1;">Why Choose Püper?</h2>
-                      <div class="features-grid">
-                        <div class="feature-card" style="opacity: 1; transform: none;">
-                          <div class="feature-icon">🗺️</div>
-                          <h3>Real-time Map</h3>
-                          <p>Find restrooms near you with our interactive map powered by community data.</p>
-                        </div>
-                        <div class="feature-card" style="opacity: 1; transform: none;">
-                          <div class="feature-icon">⭐</div>
-                          <h3>Community Reviews</h3>
-                          <p>Read honest reviews about cleanliness, accessibility, and amenities.</p>
-                        </div>
-                        <div class="feature-card" style="opacity: 1; transform: none;">
-                          <div class="feature-icon">♿</div>
-                          <h3>Accessibility Info</h3>
-                          <p>Filter by wheelchair access, baby changing stations, and gender-neutral options.</p>
-                        </div>
-                      </div>
-                    </div>
-                  </section>
-                  <section class="cta-section" style="background-image: url(&quot;/static/media/1.4c26973a53092010ef4a.png&quot;);">
-                    <div class="container">
-                      <div class="cta-content" style="opacity: 1; transform: none;">
-                        <h2>Join the Community</h2>
-                        <p>Help others find relief by adding and reviewing restrooms in your area.</p>
-                        <a href="/leaderboard">
-                          <button class="btn btn-primary btn-large leaderboard-button" type="button" tabindex="0" style="transform: none;">View Leaderboard</button>
-                        </a>
-                      </div>
-                    </div>
-                  </section>
-                </div>
-              </main>
-              <footer class="footer" style="background-image: url(&quot;/static/media/wood.1862ac321fb0f8779ae6.png&quot;);">
-                <div class="footer-content">
-                  <div class="footer-section">
-                    <h3>Püper</h3>
-                    <p>Making public restrooms accessible to everyone, everywhere.</p>
-                  </div>
-                </div>
-              </footer>
-            </div>
-          </div>
-        </header>
-      </div>
-    </div>
-  </div>
-</body>
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="theme-color" content="#000000" />
+    <meta name="description" content="Püper — Your guide to relief" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <title>Puper</title>
+  </head>
+  <body>
+    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div id="root"></div>
+  </body>
 </html>
